# tikkun-tohu

./: .gitignore  README.md  batch_token_embedder.py  cli.py  get_embeddings.py  openai.py  pyproject.toml
.github/workflows/: pylint.yml
src/: batch_token_embed.py  get_embeddings.py  openai.py  tikkuntohu_types.py
src/tikkuntohu/: batch_token_embed.py  cli.py  get_embeddings.py
